# reverse-courses-platform

./: README.md  docker-compose-prod.yaml  docker-compose.yaml  nginx.conf
.github/workflows/: build-backend.yml  deploy-backend.yml  docker-backend.yml  pipeline.yml
backend/: Dockerfile  Taskfile.yml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 6b4353972f27_init.py  ed31032f20eb_init.py
backend/source/: containers.py  main.py  settings.py
backend/source/backends/: abstract.py  auth.py
backend/source/database/: core.py  models.py
backend/source/routers/: auth.py  courses.py  service.py  users.py
backend/source/schemas/: user.py
backend/source/services/: abstract.py  database.py  smtp.py
backend/source/services/storage/: abstract.py  redis.py
backend/templates/: registration.html
frontend/: .eslintrc.js  Dockerfile  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: FooterBar.vue  NavBar.vue  WelcomeBoard.vue
frontend/src/router/: index.js
frontend/src/styles/: main.scss
frontend/src/views/: IndexView.vue  RegistrationView.vue
