[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Darius1223 <dar.290199@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.32"}
alembic = "^1.13.2"
uvicorn = "^0.30.6"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
psycopg2-binary = "^2.9.9"
structlog = "^24.4.0"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
mypy = "^1.11.1"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
